--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "post-update": "yarn upgrade --latest"
     },
     "dependencies": {
-        "modern-normalize": "^1.1.0"
+        "modern-normalize": "^1.1.0",
+        "swiper": "^8.1.4"
     },
     "devDependencies": {
         "clean-webpack-plugin": "^4.0.0",
