--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
-    "name": "static-site-webpack",
-    "version": "1.0.0",
-    "scripts": {
-        "dev": "webpack --mode development",
-        "watch": "webpack --mode development --watch",
-        "start": "webpack serve --mode development --open",
-        "build": "webpack --mode production && prettier --print-width=120 --parser html --write dist/*.html",
-        "format": "prettier --write **/*.{js,scss,html}",
-        "post-update": "yarn upgrade --latest"
-    },
-    "dependencies": {
-        "modern-normalize": "^1.1.0",
-        "swiper": "^8.1.4"
-    },
-    "devDependencies": {
-        "clean-webpack-plugin": "^4.0.0",
-        "copy-webpack-plugin": "^9.0.1",
-        "css-loader": "^6.3.0",
-        "css-minimizer-webpack-plugin": "^3.0.2",
-        "html-webpack-plugin": "^5.3.2",
-        "mini-css-extract-plugin": "^2.3.0",
-        "node-sass": "^6.0.1",
-        "prettier": "^2.4.1",
-        "raw-loader": "^4.0.2",
-        "sass-loader": "^12.1.0",
-        "terser-webpack-plugin": "^5.2.4",
-        "webpack": "^5.53.0",
-        "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "^4.2.1"
-    },
-    "main": "index.js",
-    "repository": "https://github.com/maxdanko2000/diplom-museum",
-    "author": "maxdanko2000",
-    "license": "MIT"
+  "name": "static-site-webpack",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack serve --no-client-overlay-warnings --open --port 3000",
+    "watch": "webpack --mode development --watch",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production && prettier --print-width=120 --parser html --write dist/*.html",
+    "format": "prettier --write **/*.{js,scss,html}",
+    "post-update": "yarn upgrade --latest"
+  },
+  "dependencies": {
+    "modern-normalize": "^1.1.0",
+    "swiper": "^8.0.7"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "glob": "^8.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.1",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.49.10",
+    "sass-loader": "^12.6.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  }
 }
